# chirpedex

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  id.Dockerfile  pyproject.toml
.github/workflows/: tests.yml
examples/: README.md
images/: id.Dockerfile
src/chirpedex/: __init__.py  __main__.py  audio.py  cli.py  exit_codes.py  identifier.py  models.py
src/chirpedex/api/: __init__.py  server.py
src/chirpedex/cli/: __init__.py  api.py  cli.py  command.py  factories.py  identify.py  serve.py
src/chirpedex/cli/identify/: identify.py  identify_multi.py  identify_single.py
src/chirpedex/client/: identify_and_record_service.py
src/chirpedex/client/api/: server.py
src/chirpedex/client/cli/: __init__.py  command.py  exit_codes.py  factories.py  serve.py
src/chirpedex/client/cli/identify/: identify.py  identify_multi.py  identify_single.py
src/chirpedex/core/: __init__.py  audio.py  errors.py  location.py  models.py
src/chirpedex/core/db/: __init__.py  no_repo.py  postgres_repo.py
src/chirpedex/core/db/models/: bird_sighting.py  bird_sighting_create.py
src/chirpedex/core/db/sql/: 01-schema.sql
src/chirpedex/core/identification/: __init__.py  birdnet_identifier.py  remote_identifier.py
src/chirpedex/identification/: birdnet_identifier.py  identifier.py  remote_identifier.py
src/chirpedex/identifiers/: birdnet_identifier.py  identifier.py  remote_identifier.py
tests/: conftest.py  test_api.py  test_audio.py  test_cli.py  test_identifier.py  test_models.py  test_postgres_repo.py
