[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chirpedex"
version = "0.1.0"
description = "A portable bird identification Pokédex"
requires-python = ">=3.12"
dependencies = [
    "birdnetlib>=0.4.1",
    "librosa>=0.10.0",
    "numpy>=1.24.0",
    "tensorflow>=2.21.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
chirpedex = "chirpedex.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/chirpedex"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
