[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[project]
name = "chirpedex"
description = "A portable bird identification Pokédex"
requires-python = ">=3.12"
dynamic = ["version"]
dependencies = [
    "birdnetlib>=0.4.1",
    "fastapi>=0.137.0",
    "librosa>=0.10.0",
    "numpy>=1.24.0",
    "pytest>=9.0.3",
    "resampy>=0.4.3",
    "tensorflow>=2.21.0",
    "uvicorn>=0.49.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=4.0",
    "fastapi[standard]>=0.137.0"
]

[project.scripts]
chirpedex = "chirpedex.cli.cli:main"

[tool.fastapi]
entrypoint = "chirpedex.api.server:_app"

[tool.hatch.build.targets.wheel]
packages = ["src/chirpedex"]

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.uv-dynamic-versioning]
fallback-version = "0.0.0"

[dependency-groups]
dev = [
    "fastapi[standard]>=0.137.0",
    "pytest>=9.0.3",
]
